# kate

./: CMakeLists.txt
addons/: CMakeLists.txt
addons/backtracebrowser/: CMakeLists.txt  btdatabase.cpp  btfileindexer.cpp  btparser.cpp  katebacktracebrowser.cpp  katebacktracebrowserplugin.json
addons/bookmarks/: bookmarksplugin.json
addons/close-except-like/: CMakeLists.txt  close_except_plugin.cpp  katecloseexceptplugin.json
addons/cmake-tools/: cmakecompletion.cpp  cmaketoolsplugin.json
addons/colorpicker/: CMakeLists.txt  katecolorpickerplugin.cpp  katecolorpickerplugin.json
addons/compiler-explorer/: AsmView.cpp  AsmViewModel.cpp  AsmViewModel.h  ce_plugin.cpp  ce_plugin.h  ce_plugin.json  ce_service.cpp  ce_widget.cpp  ce_widget.h  compiledbreader.cpp
addons/eslint/: EslintPlugin.json
addons/externaltools/: CMakeLists.txt  externaltoolsplugin.cpp  externaltoolsplugin.h  externaltoolsplugin.json  kateexternaltool.cpp  kateexternaltool.h  kateexternaltoolsconfigwidget.cpp  kateexternaltoolsview.cpp
addons/filebrowser/: CMakeLists.txt  katefilebrowser.cpp  katefilebrowserplugin.json
addons/filetree/: CMakeLists.txt  katefiletreemodel.cpp  katefiletreeplugin.json
addons/format/: FormatApply.h  FormatPlugin.json  Formatters.cpp  Formatters.h
addons/gdbplugin/: CMakeLists.txt  configview.cpp  dapbackend.cpp  kategdbplugin.json
addons/git-blame/: CMakeLists.txt  gitblametooltip.cpp  kategitblameplugin.cpp  kategitblameplugin.json
apps/lib/: urlinfo.h  (+14 more)
kate/: katetabbar.cpp  katetabbar.h  kateviewmanager.cpp  kateviewspace.cpp  kateviewspace.h
(+463 files in other folders)
